0027895: Correction in the constructor Extrema_ExtElC::Extrema_ExtElC (const gp_Lin&,const gp_Lin&,const Standard_Real)

Computation algorithm is made more simple.
Adjusting some test cases according to their new behavior.